<resources>
    <string name="app_name">TravelRecordApp</string>

    <string name="app_title">여행기록앱</string>
    <string name="app_subtitle">나의 여행 장소, 사진, 메모를 기록합니다</string>

    <string name="nav_home">홈</string>
    <string name="nav_list">기록</string>
    <string name="nav_map">지도</string>
    <string name="nav_info">정보</string>

    <string name="home_title">나만의 여행 다이어리</string>
    <string name="home_desc">다녀온 여행지를 사진과 메모로 기록하고, 지도에서 다시 확인할 수 있습니다.</string>

    <string name="list_title">여행 기록 목록</string>
    <string name="list_desc">저장된 여행 기록을 RecyclerView로 보여줄 화면입니다.</string>

    <string name="map_title">여행 지도</string>
    <string name="map_desc">저장된 여행 장소를 지도 마커로 표시할 화면입니다.</string>

    <string name="info_title">앱 정보</string>
    <string name="info_desc">모바일프로그래밍 기말 프로젝트 진행 상황을 정리하는 화면입니다.</string>
</resources>